--- a/doc/TODO
+++ b/doc/TODO
@@ -1,12 +1,20 @@
-Build vboxadm to manage virtual mailboxes
+TODO:
+- Vacation Handling
+use/adapt postfixadmin vacation.pl for vacation handling
 
-use CGI::Application and Template::Toolkit.
-
-use postfixadmin vacation.pl for vacation handling
-
+- Roundcube Plugin
 no user logins to vboxadm, only domainadmins and superadmins.
 the user part is handled by a roundcube plugin
 http://trac.roundcube.net/wiki/Doc_Plugins
+
+- Password Schemes
+Select correct password scheme
+
+- Max_msg_size
+implement Policy-Daemon based on http://www.corpit.ru/mjt/smtpd-policy-template.pl
+
+- Debianiazion
+Create debian package
 
 ###########################################################################
 Postfix:
