--- a/doc/INSTALL
+++ b/doc/INSTALL
@@ -1,6 +1,21 @@
 How to Install VBoxAdm
 ======================
 
+* Prerequisites
+- MySQLd
+- Lighttpd (or Apache)
+- PHP5
+- Perl
+- CGI::Application
+- CGI::Application::Plugin::DBH
+- CGI::Application::Plugin::Redirect
+- CGI::Application::Plugin::Session
+- CGI::Application::Plugin::TT
+- CGI::Application::Plugin::RequireSSL
+- CGI::Application::Plugin::Authentication
+- Config::Std
+- Famfamfam Silk Icons
+
 * Install MySQL
 In the default setup we need InnoDB. If you want to avoid InnoDB you can change the schema,
 but beware: This application relies on working foreign key contraints. So embrace errors if you
@@ -30,20 +45,45 @@ $> mysql -uvboxadm -p vboxadm < doc/schema.sql
 * Install Lighttpd
 Enable cgi (or fastcgi) and create a vhost, like this:
 
-TODO lighty vhost sample!
+$HTTP["host"] =~ "vboxadm\.domain\.tld" {
+        var.basedir = "/var/www/vboxadm/"
+        server.document-root = basedir
+        alias.url += (
+                "/css/" => basedir + "res/css/",
+                "/images/" => basedir + "res/images/",
+                "/js/" => basedir + "res/js/",
+                "/icons/fffsilk/" => "/usr/share/icons/famfamfam/silk/",
+        )
+}
 
 * Install Roundcube
 
 Unpack Roundcube to your webroot and follow the instructions of the installer. Use the database
 and user created above. 
 
-* Active Roundcube Plugins: managesieve and password
+* Install Roundcube Plugin: vacation
 
-Edit the file TODO ...
+Since the vacation plugin is not contained in the upstream sources of roundcube, a modified version is supplied
+with VBoxAdm. Copy the folder contrib/roundcube/plugins/vacation to your roundcube plugins folder.
 
-* Install and active Roundcube Plugin: vacation
+* Configure Roundcube Plugins
 
-TODO
+Edit plugins/vacation/config.ini and set a dsn in the default section:
+dsn = "mysql://vboxadm_user:password@localhost"
+
+Copy the config.inc.php.dist in plugins/password to config.inc.php and set the dsn
+$rcmail_config['password_db_dsn'] = 'mysql://vboxadm_user:password@localhost';
+
+and the password query:
+$rcmail_config['password_query'] = "UPDATE vboxadm.mailboxes SET password = %p WHERE local_part = %l AND password = %o AND domain_id = (SELECT id FROM vboxadm.domains WHERE name = %d)";
+
+Copy the config.inc.php.dist in plugins/managesieve to config.inc.php.
+
+* Active the Roundcube Plugins
+
+Edit the file config/main.inc.php and add the plugins 'password', 'managesieve' and 'vacation'.
+
+$rcmail_config['plugins'] = array('password','managesieve', 'vacation');
 
 * Configure Postfix
 Copy the directory maps to /etc/postfix and make the following adjustments to your main.cf:
