--- a/doc/TODO
+++ b/doc/TODO
@@ -19,6 +19,30 @@ implement Policy-Daemon based on http://www.corpit.ru/mjt/smtpd-policy-template.
 Create debian package
 
 - Amavis Konfiguration
+-- see http://www.gentoo.org/doc/en/mailfilter-guide.xml and
+implement per recipient configuration of:
+* spam filtering
+* virus filtering
+* bad header filtering
+* spam subject rewrite
+* spam quarantine
+* spam tag level
+* spam tag2 level
+* spam kill level
+
+Add
+@lookup_sql_dsn =
+   ( ['DBI:mysql:maildb:host1', 'mail', 'very_secret_password']  );
+
+and
+$sql_select_policy = 'SELECT m.id AS id,CONCAT(m.local_part,'-',d.name) AS policy_name,
+no_av, no_sa, want_badfiles, want_badheader, no_av, no_sa, want_badfiles, want_badheader, sa_rewritesubj, sa_tag_level, sa_tag2_level, sa_kill_level, m.id
+FROM mailboxes AS m LEFT JOIN domains AS d ON m.domain_id = d.id WHERE CONCAT(m.local_part,'@',d.name) IN (%k);
+
+(If you want sender white/blacklisting)
+$sql_select_white_black_list = 'SELECT w.wb FROM wblist AS w LEFT JOIN
+mailboxes AS m ON w.mailbox_id = m.id LEFT JOIN domains AS d ON m.domain_id = d.id
+WHERE w.sender = ? AND CONCAT(m.local_part,'@',d.name) IN (%k);
 
 - Allow dynamic mysql lookup tables in recipient checks?
 
