--- a/doc/TODO
+++ b/doc/TODO
@@ -1,5 +1,9 @@
 TODO:
 
+- L10N helper script:
+-- extract lexicons from pm files and generate csv
+-- import lexicons from csv
+
 - Evaluate alternatives to postgrey
 Make sure class-C ip subnet auto-whitelists are supported
 
